[package]
name = "garray2d"
version = "0.1.0"
edition = "2024"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/garray2d"
description = """
Game development focused 2d array with signed index and offset support.
"""
keywords = ["array", "2d", "grid"]


[dependencies]
mint = "0.5.9"

[dev-dependencies]
glam = { version = "0.30.4", features = ["mint"]}
