[package]
name = "garray2d"
version = "0.2.3"
edition = "2024"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/garray2d"
description = """
Game development focused 2d array with signed index and offset support.
"""
keywords = ["array", "2d", "grid"]

[lib]
doctest = false

[features]
default = []
serde = ["dep:serde"]

[dependencies]
mint = "0.5.9"
serde = { version = "1.0.219", optional = true, features = ["derive"]}

[dev-dependencies]
glam = { version = "0.30.4", features = ["mint"]}
serde_json = "1.0.140"
